# tabula

./: .appveyor.yml  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md  vcpkg.json
.github/: codecov.yml  dependabot.yml
.github/vcpkg/toolchains/: libcxx.cmake
.github/vcpkg/triplets/: x64-linux-libcxx.cmake
.github/workflows/: actionlint.yml  apple-clang.yml  appleclang.yml  canary.yml  clang-cl.yml  clang-format.yml  clang-libc++.yml  clang-tidy.yml  clang.yml  codeql.yml  consumption.yml  coverage.yml  gcc.yml  mingw.yml  msvc.yml  sanitizers.yml  scorecard.yml
cmake/: tabulaConfig.cmake.in
example/: CMakeLists.txt  print_embedding.cpp
include/tabula/: board.hpp  compass.hpp  concepts.hpp  dihedral.hpp  direction.hpp  embedding.hpp  format.hpp  functional.hpp  games.hpp  grids.hpp  lake.hpp  lakes.hpp  ostream.hpp  padding.hpp  point.hpp  shapes.hpp  square.hpp  transforms.hpp  tuple.hpp  type_traits.hpp  valid.hpp  vector.hpp
include/tabula/games/: chess.hpp  draughts.hpp  stratego.hpp
include/tabula/grids/: basic_rectangle.hpp  chequer.hpp  chequered.hpp  chequered_rectangle.hpp  chequeredhpp  rectangle.hpp
include/tabula/shapes/: basic_rectangle.hpp  chequered_rectangle.hpp
test/: CMakeLists.txt
test/src/: compass.cpp  concepts.cpp  directions.cpp  format_ranges.cpp  grids.cpp
